--- a/style.css
+++ b/style.css
@@ -11,5 +11,21 @@ header {
   flex-direction: column;
   justify-content: space-between;
   height: 8rem;
-  padding:10px
+  padding: 10px
+}
+
+#today {
+  border-style: solid;
+  padding: 10px;
+  height: 15rem;
+}
+
+#week {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.weekChild {
+  border-style: solid;
+  width:auto
 }
