--- a/style.css
+++ b/style.css
@@ -6,26 +6,32 @@ header {
 }
 
 .col-auto {
-  margin-left: -6rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 8rem;
-  padding: 10px
+  padding: 10px;
+  width: auto;
 }
 
 #today {
+  visibility: hidden;
   border-style: solid;
   padding: 10px;
   height: 15rem;
+  display: flex;
 }
 
 #week {
   display: flex;
   justify-content: space-evenly;
+
+
 }
 
 .weekChild {
   border-style: solid;
-  width:auto
+  width: auto ;
+  background-color: rgb(13, 11, 90);
+  color:white;
 }
